--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ server.error.whitelabel.enabled=false
 
 # B? tính n?ng cache c?a thymeleaf ?? l?p trình cho nhanh
 spring.thymeleaf.cache=false
+
+spring.devtools.restart.enabled=true
